[TASK] TRK-3009 Upgrade dependencies

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,4 +27,5 @@ jobs:
           test: true
           race: true
           staticcheck_version: latest
+          staticcheck_ignore: "S1034"
           parallel: true
