--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -27,5 +27,5 @@ jobs:
           test: true
           race: true
           staticcheck_version: latest
-          staticcheck_ignore: "S1034"
+          staticcheck_ignore: "S1034,SA1019,ST1000"
           parallel: true
